--- a/ArabianAutomobiles/index.html
+++ b/ArabianAutomobiles/index.html
@@ -28,6 +28,7 @@
 				</select>
 			</div>
 			<div class="displayImg">
+				<div class="lds-ripple"><div></div><div></div></div>
 				<img src="" />
 			</div>
 			<div class="colorPatterns">
